--- a/index.html
+++ b/index.html
@@ -2,10 +2,57 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <!-- Title and Meta Description -->
+    <title>BTC Pirate - Discover Hidden Bitcoin Wallets</title>
+    <meta name="description" content="BTC Pirate tests random 12-word seed phrases to find hidden Bitcoin wallets, including free BTC and ghost BTC wallets. Extract words, generate combinations, create addresses, and check balances for free." />
+
+    <!-- Meta Keywords -->
+    <meta name="keywords" content="Bitcoin wallets, hidden Bitcoin wallets, free BTC, ghost BTC wallet, 12-word seed phrases, Bitcoin address generator, Bitcoin balance checker" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://btcpirate.onrender.com/" />
+
+    <!-- Open Graph Tags for Social Media -->
+    <meta property="og:title" content="BTC Pirate - Discover Hidden Bitcoin Wallets" />
+    <meta property="og:description" content="BTC Pirate tests random 12-word seed phrases to find hidden Bitcoin wallets, including free BTC and ghost BTC wallets. Extract words, generate combinations, create addresses, and check balances for free." />
+    <meta property="og:image" content="/images/og-image.jpg" />
+    <meta property="og:url" content="https://btcpirate.onrender.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="BTC Pirate - Discover Hidden Bitcoin Wallets" />
+    <meta name="twitter:description" content="BTC Pirate tests random 12-word seed phrases to find hidden Bitcoin wallets, including free BTC and ghost BTC wallets. Extract words, generate combinations, create addresses, and check balances for free." />
+    <meta name="twitter:image" content="/images/twitter-card-image.jpg" />
+    <meta name="twitter:site" content="@YourTwitterHandle" />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/jpeg" href="/logo.jpg" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BTC Pirate</title>
+    <!-- Structured Data (Schema.org) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "BTC Pirate",
+        "url": "https://btcpirate.onrender.com/",
+        "description": "BTC Pirate tests random 12-word seed phrases to find hidden Bitcoin wallets, including free BTC and ghost BTC wallets. Extract words, generate combinations, create addresses, and check balances for free.",
+        "sameAs": [
+          "https://twitter.com/YourTwitterHandle",
+          "https://www.facebook.com/YourFacebookPage"
+        ]
+      }
+    </script>
+
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8403949621457611"
+            crossorigin="anonymous"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
   </head>
   <body>
     <div id="root"></div>
